feat: add deployment to AWS
codepipeline watches main and builds/deploys to ecs
