# server/docs/swagger.json
@@ -4,6 +4,20 @@
         "contact": {}
     },
     "paths": {
+        "/api/v1/health": {
+            "get": {
+                "description": "returns 200 when requested",
+                "tags": [
+                    "health"
+                ],
+                "summary": "Health check",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/api/v1/jots": {
             "get": {
                 "security": [
